# simple-todo

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: autostart.json  dialog.json  fs.json  opener.json  window.json
src-tauri/src/: main.rs
src/components/: AdvancedEditor.vue  BlockEditor.vue  EditorToolbar.vue  TitleBar.vue
src/i18n/: en-US.json  zh-CN.json
src/router/: index.ts
src/store/: settings.ts  todo.ts
src/views/: AboutView.vue  SettingsView.vue  TodoDetailView.vue  TodoListView.vue
